@@ -27,4 +27,4 @@ COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
 
 # Arrancar la app
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-XX:+UseZGC", "-XX:MaxRAMPercentage=75.0", "-jar", "app.jar"]
